# nfelo

./: .gitignore  CHANGELOG.md  README.md  __init__.py  config.json  config_private.json  pyproject.toml  requirements.txt
data_pulls/: pull_538_games.py  pull_nflfastR_game.py  pull_nflfastR_logo.py  pull_nflfastR_participants.py  pull_nflfastR_pbp.py  pull_nflfastR_roster.py  pull_pff_grades.py  pull_pfr_coaches.py  pull_qbr.py  pull_sbr_lines.py  pull_tfl_lines.py
data_sources/fbo/: dvoa_projections.csv
data_sources/formatted/: temps_by_week.csv
data_sources/nfelo/: probability_spread_multiples.csv  scored_individual_games.csv
data_sources/wepa/: weights.csv
formatting/: format_spreads.py  game_data_merge.py
models/: calculate_nfelo.py  calculate_spreads.py  calculate_wepa.py  calculate_wt_ratings.py
nfelo/: __init__.py  development.py  scripts.py
nfelo/Analytics/: NfeloAnalytics.py  __init__.py
nfelo/Data/: DataLoader.py
nfelo/Development/: __init__.py  optimization.py
nfelo/Formatting/: NfeloFormatter.py  __init__.py
nfelo/Model/: Nfelo.py  __init__.py
nfelo/Optimizer/: ANALYSIS_PLAYBOOK.md  NfeloOptimizer.py  __init__.py
nfelo/Performance/: NfeloGrader.py  NfeloGraderModel.py  __init__.py
nfelo/Utilities/: __init__.py  base.py  bet_size.py  clv.py  cover_probability.py  elo_shift.py  market_regression.py  merge_check.py  odds.py  offseason_regression.py  scoring_brier.py  (+5 more)
output_data/: elo_snapshot.csv  historic_projected_spreads.csv  nfelo_games.csv  prediction_tracker.csv
training/: NfeloTraining.py  TRAINING_PLAYBOOK.md  __init__.py
(+22 files in other folders)
